Fixed deprecated newInstance()